added qr code for battery widget

--- a/app/settings/samsung-widgets/main.html
+++ b/app/settings/samsung-widgets/main.html
@@ -18,6 +18,11 @@
         <span>Battery Widget</span>
 
         <div class="bubble-right">
+            <img class="qrcode" src=".././res/ic_oui_qr_code.svg"
+                onclick="openSubMenu('samsung-widgets/battery/qrcode')">
+
+            <seperatorvertical></seperatorvertical>
+
             <label class="oui-label oui-container-toggle" for="battery-checkbox">
                 <input id="battery-checkbox" type="checkbox" class="toggle">
                 <span class="toggle-slider"></span>
@@ -46,7 +51,8 @@
         <span>Weather Widget</span>
 
         <div class="bubble-right">
-            <img class="settings" src=".././res/ic_oui_settings_outline.svg" onclick="openSubMenu('samsung-widgets/weather')">
+            <img class="settings" src=".././res/ic_oui_settings_outline.svg"
+                onclick="openSubMenu('samsung-widgets/weather')">
 
             <seperatorvertical></seperatorvertical>
 
@@ -78,7 +84,8 @@
         <span>Flight Widget</span>
 
         <div class="bubble-right">
-            <img class="settings" src=".././res/ic_oui_settings_outline.svg" onclick="openSubMenu('samsung-widgets/flight')">
+            <img class="settings" src=".././res/ic_oui_settings_outline.svg"
+                onclick="openSubMenu('samsung-widgets/flight')">
 
             <seperatorvertical></seperatorvertical>
 
