--- a/app/settings/samsung-widgets/battery/qrcode/main.html
+++ b/app/settings/samsung-widgets/battery/qrcode/main.html
@@ -1,3 +1,9 @@
+<bubble-titlebar>
+    <img class="back-menu" src="../res/ic_oui_back.svg"
+        onclick="openSubMenu('samsung-widgets'); deleteScript('samsung-widgets\\weather'); deleteScript('samsung-widgets')">
+    <strong>Weather</strong>
+</bubble-titlebar>
+
 <bubble>
     <h1>Setup</h1>
     <img src=".././res/qrCodes/battery.svg" class="qrcode-image">
