--- a/app/settings/samsung-widgets/main.html
+++ b/app/settings/samsung-widgets/main.html
@@ -1,4 +1,16 @@
 <bubble>
+        <container class="bubble-info">
+        
+            <span>Colors</span>
+        
+            <div class="bubble-right">
+                <img class="settings" src=".././res/ic_oui_settings_outline.svg"
+                    onclick="openSubMenu('samsung-widgets/colors')">
+            </div>
+        </container>
+</bubble>
+
+<bubble>
     <container class="bubble-info">
 
         <span>Music Widget</span>
