--- a/app/settings/samsung-widgets/main.html
+++ b/app/settings/samsung-widgets/main.html
@@ -1,13 +1,13 @@
 <bubble>
-        <container class="bubble-info">
-        
-            <span>Colors</span>
-        
-            <div class="bubble-right">
-                <img class="settings" src=".././res/ic_oui_settings_outline.svg"
-                    onclick="openSubMenu('samsung-widgets/colors')">
-            </div>
-        </container>
+    <container class="bubble-info">
+
+        <span>Colors</span>
+
+        <div class="bubble-right">
+            <img class="settings" src=".././res/ic_oui_settings_outline.svg"
+                onclick="openSubMenu('samsung-widgets/colors')">
+        </div>
+    </container>
 </bubble>
 
 <bubble>
@@ -138,4 +138,20 @@
         </div>
     </container>
 
+    <seperatorhorizontal></seperatorhorizontal>
+
+    <container class="bubble-info">
+
+        <span>Clock Widget</span>
+
+        <div class="bubble-right">
+            <label class="oui-label oui-container-toggle" for="clock-checkbox">
+                <input id="clock-checkbox" type="checkbox" class="toggle">
+                <span class="toggle-slider"></span>
+            </label>
+        </div>
+    </container>
+
 </bubble>
+
+<br>
