some little changes

--- a/app/html/main.html
+++ b/app/html/main.html
@@ -19,8 +19,7 @@
     <div id="info-modal">
         <img class="back" src="../res/ic_oui_back.svg" onclick="openModal()">
         <h2>Samsung Settings</h1>
-            <span>Version</span>
-            <span></span>
+        <span id="version" class="note">Version</span>
     </div>
 
     <div id="backdrop"></div>
