--- a/app/settings/samsung-widgets/battery/qrcode/main.html
+++ b/app/settings/samsung-widgets/battery/qrcode/main.html
@@ -1,11 +1,10 @@
 <bubble-titlebar>
     <img class="back-menu" src="../res/ic_oui_back.svg"
         onclick="openSubMenu('samsung-widgets'); deleteScript('samsung-widgets\\weather'); deleteScript('samsung-widgets')">
-    <strong>Weather</strong>
+    <strong>Battery Setup</strong>
 </bubble-titlebar>
 
 <bubble>
-    <h1>Setup</h1>
     <img src=".././res/qrCodes/battery.svg" class="qrcode-image">
-    <p>Scan this QR-Code for instructions of setting up the battery widget on both a phone and a tablet</p>
+    <span class="note">Scan this QR-Code for instructions of setting up the battery widget on both a phone and a tablet</span>
 </bubble>
