--- a/app/settings/samsung-widgets/colors/main.html
+++ b/app/settings/samsung-widgets/colors/main.html
@@ -9,8 +9,10 @@
         <div class="color" id="black" onclick="setColor(28, 28, 28)"></div>
         <div class="color" id="teal" onclick="setColor(34, 190, 179)"></div>
         <div class="color" id="blue" onclick="setColor(123, 175, 232)"></div>
+        <div class="color" id="green" onclick="setColor(206, 208, 171)"></div>
         <div class="color" id="pink" onclick="setColor(202, 150, 235)"></div>
         <div class="color" id="purple" onclick="setColor(235, 139, 200)"></div>
         <div class="color" id="beige" onclick="setColor(238, 218, 193)"></div>
     </container>
+    <span class="note">This setting requires an app restart of Samsung Widgets</span>
 </bubble>
