updated for new samsung settings widgets plus new color for widgets

--- a/app/settings/samsung-widgets/main.html
+++ b/app/settings/samsung-widgets/main.html
@@ -142,8 +142,8 @@
             <img src=".././res/previews/news/topStories_preview.png">
             <preview-info>
                 <span class="info">Top Stories</span>
-                <label class="oui-label oui-container-toggle" for="news-checkbox">
-                    <input id="news-checkbox" type="checkbox" class="toggle">
+                <label class="oui-label oui-container-toggle" for="topStories-checkbox">
+                    <input id="topStories-checkbox" type="checkbox" class="toggle">
                     <span class="toggle-slider"></span>
                 </label>
             </preview-info>
@@ -231,10 +231,6 @@
             </div>
 
             <div class="bubble-right">
-                <!-- <label class="oui-label oui-container-toggle" for="notes-checkbox">
-                            <input id="clock-checkbox" type="checkbox" class="toggle">
-                            <span class="toggle-slider"></span>
-                        </label> -->
                 <img class="preview-button" onclick="togglePreview('notes-container')"
                     src=".././res/ic_oui_keyboard_arrow_down.svg"></img>
 
@@ -247,8 +243,8 @@
             <img class="image-preview" src=".././res/previews/notes/quickNotes_preview.png">
             <preview-info>
                 <span class="info">Quick Notes</span>
-                <label class="oui-label oui-container-toggle" for="notes-checkbox">
-                    <input id="notes-checkbox" type="checkbox" class="toggle">
+                <label class="oui-label oui-container-toggle" for="quickNotes-checkbox">
+                    <input id="quickNotes-checkbox" type="checkbox" class="toggle">
                     <span class="toggle-slider"></span>
                 </label>
             </preview-info>
@@ -266,10 +262,6 @@
             </div>
 
             <div class="bubble-right">
-                <!-- <label class="oui-label oui-container-toggle" for="clock-checkbox">
-                        <input id="clock-checkbox" type="checkbox" class="toggle">
-                        <span class="toggle-slider"></span>
-                    </label> -->
                 <img class="preview-button" onclick="togglePreview('clock-container')"
                     src=".././res/ic_oui_keyboard_arrow_down.svg"></img>
 
@@ -282,8 +274,8 @@
             <img class="image-preview" src=".././res/previews/clock/clock_preview.png">
             <preview-info>
                 <span class="info">Digital Clock</span>
-                <label class="oui-label oui-container-toggle" for="clock-checkbox">
-                    <input id="clock-checkbox" type="checkbox" class="toggle">
+                <label class="oui-label oui-container-toggle" for="digitalClock-checkbox">
+                    <input id="digitalClock-checkbox" type="checkbox" class="toggle">
                     <span class="toggle-slider"></span>
                 </label>
             </preview-info>
