--- a/app/settings/samsung-widgets/colors/main.html
+++ b/app/settings/samsung-widgets/colors/main.html
@@ -14,6 +14,7 @@
         <div class="color" id="purple" onclick="setColor(235, 139, 200)"></div>
         <div class="color" id="beige" onclick="setColor(238, 218, 193)"></div>
         <div class="color" id="red" onclick="setColor(240, 122, 140)"></div>
+        <div class="color" id="white" onclick="setColor(255, 255, 255)"></div>
     </container>
     <span class="note">This setting requires an app restart of Samsung Widgets</span>
 </bubble>
