--- a/app/settings/samsung-widgets/main.html
+++ b/app/settings/samsung-widgets/main.html
@@ -116,6 +116,22 @@
                 </preview-right>
 
             </preview-info>
+
+            <img class="image-preview" src=".././res/previews/weather/forecast_preview.png">
+            <preview-info>
+                <span class="info">Forecast</span>
+
+                <preview-right>
+                    <img class="settings" src=".././res/ic_oui_settings_outline.svg"
+                        onclick="openSubMenu('samsung-widgets/weather')">
+
+                    <label class="oui-label oui-container-toggle" for="forecast-checkbox">
+                        <input id="forecast-checkbox" type="checkbox" class="toggle">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </preview-right>
+
+            </preview-info>
         </bubble-preview>
 
     </container>
