--- a/app/html/main.html
+++ b/app/html/main.html
@@ -18,7 +18,7 @@
 <body>
     <div id="info-modal">
         <img class="back" src="../res/ic_oui_back.svg" onclick="openModal()">
-        <h2>Samsung Settings</h1>
+        <h2>Galaxy Settings</h1>
         <span id="version" class="note">Version</span>
     </div>
 
@@ -30,10 +30,10 @@
             <h1>Settings</h1>
         </header>
 
-        <bubble-nav onclick="openSubMenu('samsung-widgets', event)">
-            <img src="../res/icons/samsung-widgets.ico" class="bubble-icon">
+        <bubble-nav onclick="openSubMenu('galaxy-widgets', event)">
+            <img src="../res/icons/Galaxy-widgets.ico" class="bubble-icon">
             <bubble-text>
-                <span>Samsung Widgets</span>
+                <span>Galaxy Widgets</span>
                 <bubble-settings>
                     <span>Music</span>
                     <point></point>
@@ -44,10 +44,10 @@
             </bubble-text>
         </bubble-nav>
 
-        <!-- <bubble-nav onclick="openSubMenu('samsung-finder')">
-            <img src="../res/icons/samsung-finder.ico" class="bubble-icon">
+        <!-- <bubble-nav onclick="openSubMenu('Galaxy-finder')">
+            <img src="../res/icons/Galaxy-finder.ico" class="bubble-icon">
             <bubble-text>
-                <span>Samsung Finder</span>
+                <span>Galaxy Finder</span>
                 <bubble-settings>
                     <span>Autostart</span>
                     <point></point>
