--- a/app/settings/galaxy-widgets/colors/main.html
+++ b/app/settings/galaxy-widgets/colors/main.html
@@ -1,6 +1,6 @@
 <bubble-titlebar>
     <img class="back-menu" src="../res/ic_oui_back.svg"
-        onclick="openSubMenu('samsung-widgets'); deleteScript('samsung-widgets\\flight'); deleteScript('samsung-widgets')">
+        onclick="openSubMenu('galaxy-widgets'); deleteScript('galaxy-widgets\\flight'); deleteScript('galaxy-widgets')">
     <strong>Colors</strong>
 </bubble-titlebar>
 
