--- a/app/settings/galaxy-widgets/flight/main.html
+++ b/app/settings/galaxy-widgets/flight/main.html
@@ -1,6 +1,7 @@
 <bubble-titlebar>
     <img class="back-menu" src="../res/ic_oui_back.svg"
-        onclick="openSubMenu('samsung-widgets'); deleteScript('samsung-widgets\\flight'); deleteScript('samsung-widgets')">    <strong>Flight</strong>
+        onclick="openSubMenu('galaxy-widgets'); deleteScript('galaxy-widgets\\flight'); deleteScript('galaxy-widgets')">    
+        <strong>Flight</strong>
 </bubble-titlebar>
 
 <bubble>
