--- a/app/settings/galaxy-widgets/main.html
+++ b/app/settings/galaxy-widgets/main.html
@@ -5,7 +5,7 @@
 
             <div class="bubble-right">
                 <img class="settings" src=".././res/ic_oui_settings_outline.svg"
-                    onclick="openSubMenu('samsung-widgets/colors')">
+                    onclick="openSubMenu('galaxy-widgets/colors')">
             </div>
         </container>
 
@@ -17,7 +17,7 @@
         <container class="bubble-top">
             <div class="bubble-left">
                 <img src="../res/icons/widgets/music.png" class="bubble-icon">
-                <span>Samsung Music</span>
+                <span>Music</span>
             </div>
 
             <div class="bubble-right">
@@ -107,7 +107,7 @@
 
                 <preview-right>
                     <img class="settings" src=".././res/ic_oui_settings_outline.svg"
-                        onclick="openSubMenu('samsung-widgets/weather')">
+                        onclick="openSubMenu('galaxy-widgets/weather')">
 
                     <label class="oui-label oui-container-toggle" for="weather-checkbox">
                         <input id="weather-checkbox" type="checkbox" class="toggle">
@@ -123,7 +123,7 @@
 
                 <preview-right>
                     <img class="settings" src=".././res/ic_oui_settings_outline.svg"
-                        onclick="openSubMenu('samsung-widgets/weather')">
+                        onclick="openSubMenu('galaxy-widgets/weather')">
 
                     <label class="oui-label oui-container-toggle" for="forecast-checkbox">
                         <input id="forecast-checkbox" type="checkbox" class="toggle">
@@ -142,7 +142,7 @@
         <container class="bubble-top">
             <div class="bubble-left">
                 <img src="../res/icons/widgets/news.png" class="bubble-icon">
-                <span>Samsung News</span>
+                <span>News</span>
             </div>
 
             <div class="bubble-right">
@@ -173,7 +173,7 @@
         <container class="bubble-top">
             <div class="bubble-left">
                 <img src="../res/icons/widgets/wallet.png" class="bubble-icon">
-                <span>Samsung Wallet</span>
+                <span>Wallet</span>
             </div>
 
             <div class="bubble-right">
@@ -192,7 +192,7 @@
 
                 <preview-right>
                     <img class="settings" src=".././res/ic_oui_settings_outline.svg"
-                        onclick="openSubMenu('samsung-widgets/flight')">
+                        onclick="openSubMenu('galaxy-widgets/flight')">
 
                     <label class="oui-label oui-container-toggle" for="flight-checkbox">
                         <input id="flight-checkbox" type="checkbox" class="toggle">
@@ -243,7 +243,7 @@
         <container class="bubble-top">
             <div class="bubble-left">
                 <img src="../res/icons/widgets/notes.png" class="bubble-icon">
-                <span>Samsung Notes</span>
+                <span>Notes</span>
             </div>
 
             <div class="bubble-right">
