--- a/app/html/main.html
+++ b/app/html/main.html
@@ -31,7 +31,7 @@
         </header>
 
         <bubble-nav onclick="openSubMenu('galaxy-widgets', event)">
-            <img src="../res/icons/Galaxy-widgets.ico" class="bubble-icon">
+            <img src="../res/icons/galaxy-widgets.ico" class="bubble-icon">
             <bubble-text>
                 <span>Galaxy Widgets</span>
                 <bubble-settings>
@@ -44,8 +44,8 @@
             </bubble-text>
         </bubble-nav>
 
-        <!-- <bubble-nav onclick="openSubMenu('Galaxy-finder')">
-            <img src="../res/icons/Galaxy-finder.ico" class="bubble-icon">
+        <!-- <bubble-nav onclick="openSubMenu('galaxy-finder')">
+            <img src="../res/icons/galaxy-finder.ico" class="bubble-icon">
             <bubble-text>
                 <span>Galaxy Finder</span>
                 <bubble-settings>
