color system fully reworked

--- a/app/settings/galaxy-widgets/main.html
+++ b/app/settings/galaxy-widgets/main.html
@@ -132,6 +132,22 @@
                 </preview-right>
 
             </preview-info>
+
+            <img class="image-preview" src=".././res/previews/weather/hoursForecast_preview.png">
+            <preview-info>
+                <span class="info">Hours Forecast</span>
+
+                <preview-right>
+                    <img class="settings" src=".././res/ic_oui_settings_outline.svg"
+                        onclick="openSubMenu('galaxy-widgets/weather')">
+
+                    <label class="oui-label oui-container-toggle" for="hoursForecast-checkbox">
+                        <input id="hoursForecast-checkbox" type="checkbox" class="toggle">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </preview-right>
+
+            </preview-info>
         </bubble-preview>
 
     </container>
