--- a/app/settings/galaxy-widgets/colors/main.html
+++ b/app/settings/galaxy-widgets/colors/main.html
@@ -6,15 +6,14 @@
 
 <bubble>
     <container id="container-colors">
-        <div class="color" id="black" onclick="setColor(28, 28, 28)"></div>
-        <div class="color" id="teal" onclick="setColor(34, 190, 179)"></div>
-        <div class="color" id="blue" onclick="setColor(123, 175, 232)"></div>
-        <div class="color" id="green" onclick="setColor(206, 208, 171)"></div>
-        <div class="color" id="pink" onclick="setColor(202, 150, 235)"></div>
-        <div class="color" id="purple" onclick="setColor(235, 139, 200)"></div>
-        <div class="color" id="beige" onclick="setColor(238, 218, 193)"></div>
-        <div class="color" id="red" onclick="setColor(240, 122, 140)"></div>
-        <div class="color" id="white" onclick="setColor(255, 255, 255)"></div>
+        <div class="color" id="black" onclick="setColor([28,28,28], [250,250,250], [120,120,120], [170,167,195])"></div>
+        <div class="color" id="teal" onclick="setColor([34,190,170], [0,0,0], [170,170,170], [61, 148, 96])"></div>
+        <div class="color" id="blue" onclick="setColor([123,175,232], [250,250,250], [120,120,120], [75, 102, 160])"></div>
+        <div class="color" id="green" onclick="setColor([206,208,171], [0,0,0], [120,120,120], [160, 130, 84])"></div>
+        <div class="color" id="pink" onclick="setColor([202,150,235], [250,250,250], [80,80,80], [160, 84, 95])"></div>
+        <div class="color" id="purple" onclick="setColor([235,139,200], [250,250,250], [190,190,190], [99, 97, 117])"></div>
+        <div class="color" id="beige" onclick="setColor([238,218,193], [0,0,0], [120,120,120], [177, 161, 154])"></div>
+        <div class="color" id="red" onclick="setColor([240,122,140], [250,250,250], [190,190,190], [192, 169, 249])"></div>
     </container>
     <span class="note">This setting requires an app restart of Samsung Widgets</span>
 </bubble>
